<resources>
    <string name="app_name">Dental Clinic</string>
    <string name="account">診察券番号</string>
    <string name="password">パスワード</string>
    <string name="remember_login">次回から自動でログインする</string>
    <string name="login">ログイン</string>
    <string name="home">予定表</string>
    <string name="user">患者検索</string>
    <string name="chat">チャット</string>
    <string name="add">患者登録</string>
    <string name="setting">設定</string>
    <string name="title_login">いとう歯科クリニック</string>
    <string name="subtitle_login">診察券アプリ管理画面</string>
    <string name="title_calendar">予定表</string>
    <string name="title_chat">トーク</string>
    <string name="title_message">チャット</string>
    <string name="title_user">患者検索</string>
    <string name="title_user_add">患者情報編集</string>
    <string name="title_user_list">患者検索一覧</string>
    <string name="sort_by_early">新着順に表示する</string>
    <string name="sort_by_unread">未読を表示する</string>
    <string name="user_id">診察券番号:</string>
    <string name="user_id_user">診察券番号</string>
    <string name="user_name">名前:</string>
    <string name="user_name_user">お名前漢字</string>
    <string name="formal_user">お名前かな</string>
    <string name="birthday">生年月日</string>
    <string name="reservation">次回予約</string>
    <string name="search">検索する</string>
    <string name="allow_notify">通知設定をオフにする</string>
    <string name="help_notify">キャンセル防止のためのアプリプッシュ通知を\nこちらの患者さんが嫌がった場合のみ使用。</string>
    <string name="help_password">初期の暫定ログインパスワードになります。\n（例：1983年3月10日生 ⇒ 19830310)</string>
    <string name="note">備考</string>
    <string name="format_day_message">----- 3月15日午後2時　予約確認通知済 -------</string>
    <string name="type_something">タイプを入力 &#8230;</string>
    <string name="user_help">下記のお好きな項目から検索してくだい。\nお名前、お名前かなは一部でも検索できます。\n（例：やまだ ⇒ やま</string>
    <string name="morning">午前</string>
    <string name="afternoon">午後</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
    <string name="sunday">日</string>
    <string name="holiday">祝日</string>
    <string name="text_disable">X</string>
    <string name="text_title_notify">プッシュ通知設定（キャンセル防止）</string>
    <string name="first_time">1回目</string>
    <string name="next_time">2回目</string>
    <string name="sub_time">時間前</string>
    <string name="note_notify">プッシュ通知メッセージ文</string>
    <string name="note_notify_name">[kanja]=患者さんの「姓名」がセットされます。 </string>
    <string name="note_notify_time">[rtime]=予約日時がセットされます。</string>
    <string name="notify_first_time">こんにちは、[kanja]さま。\nいとう歯科クリニックです。\n明日、[rtime]よりご予約をいただいております。\nなお、ご予約の変更を希望される場合は、ご遠慮無くお知ら\nせくださいませ。\nそれでは、スタッフ一同、お待ちしております。＾＾</string>
    <string name="information_hospital">医院情報編集</string>
    <string name="name_hospital">住所</string>
    <string name="tel_hospital">TEL</string>
    <string name="practice_remark">診療時間備考</string>
    <string name="remark">備考</string>
    <string name="calendar_setting">診療時間</string>
    <string name="search_ok">患者様新規登録画面へ移動する</string>
    <string name="adding_user_to_db">ユーザーを正常に追加する</string>
    <string name="choose_from_gallery">ギャラリーから選択</string>
    <string name="take_photo">写真を撮る</string>
    <string name="select_picture">写真を選択</string>
    <string name="begin_time">開始</string>
    <string name="stop_time">終わり</string>
    <string name="holiday_time">休診</string>
    <string name="accept">受け入れたいですか？</string>
    <string name="ok">はい</string>
    <string name="cancel">キャンセル</string>
    <string name="log_out">ログアウト</string>
    <string name="question_log_out">本当にログアウトしますか</string>
    <string name="you_are_logout">あなたはログアウトしています</string>
    <string name="you_login_fail">あなたはログインに失敗します！</string>
    <string name="unknown_error_network">ネットワークで問題が発生しました。</string>
    <string name="blank_field">空白フィールド</string>
    <string name="add_user_successfully">ユーザーを追加してください。</string>
    <string name="update_user_successfully">ユーザーを正常に更新してください！</string>
    <string name="closed_day">休診日</string>
    <string name="clinic_item">診療項目</string>
    <string name="day_time">月 - 午前</string>
    <string name="from">開始</string>
    <string name="to">終わり</string>
    <string name="time_picker_title">時間を選んでください</string>
    <string name="error_from_to">入力が失敗しました</string>
    <string name="error_time">時間が入力されていない</string>
    <string name="error">エラー</string>
    <string name="save_successful">保存しました。</string>
    <string name="sex">性別</string>
    <string name="male">男性</string>
    <string name="female">女子</string>
    <string name="no_data">No Data</string>
    <string name="date_label">次回予約</string>
</resources>
