<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textColorLabel">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20.5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/day_time"
            android:textColor="@color/colorPrimary"
            android:textSize="17dp" />

        <LinearLayout
            android:id="@+id/layout_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_txt"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/from"
                android:textColor="@android:color/black"
                android:textSize="@dimen/size_edittext" />

            <TextView
                android:id="@+id/tv_begin_time"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_corner_time"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/to"
                android:textColor="@android:color/black"
                android:textSize="@dimen/size_edittext" />

            <TextView
                android:id="@+id/tv_stop_time"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_corner_time"
                android:padding="5dp" />

            <CheckBox
                android:id="@+id/cb_holiday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:buttonTint="@color/colorButtonLogin"
                android:text="@string/holiday_time"
                android:textColor="@color/textColorRemember"
                android:textSize="@dimen/size_edittext" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="12dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginTop="12dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:fontFamily="sans-serif-medium"
                    android:padding="8dp"
                    android:text="@string/ok"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16.5sp" />

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tv_ok"
                    android:layout_marginBottom="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_toLeftOf="@+id/tv_ok"
                    android:background="?android:attr/selectableItemBackground"
                    android:fontFamily="sans-serif-medium"
                    android:padding="8dp"
                    android:text="@string/cancel"
                    android:textColor="@color/textColorLabel"
                    android:textSize="16.5sp" />
            </RelativeLayout>
        </LinearLayout>


    </RelativeLayout>
</RelativeLayout>
