<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.prostage.dental_manage.views.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_title_notify"
                android:textColor="@android:color/black"
                android:textSize="@dimen/size_edittext" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/first_time"
                        android:textSize="@dimen/size_edittext" />

                    <com.prostage.dental_manage.views.ExtendedEditText
                        android:id="@+id/tv_time_notify_one"
                        android:layout_width="70dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/background_corner"
                        android:inputType="number"
                        android:maxLength="2"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/sub_time"
                        android:textSize="@dimen/size_edittext" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/next_time"
                        android:textSize="@dimen/size_edittext" />

                    <com.prostage.dental_manage.views.ExtendedEditText
                        android:id="@+id/tv_time_notify_two"
                        android:layout_width="70dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/background_corner"
                        android:inputType="number"
                        android:maxLength="2"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/sub_time"
                        android:textSize="@dimen/size_edittext" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/borderCalendarColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/note_notify"
                android:textColor="@android:color/black"
                android:textSize="@dimen/size_edittext" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/note_notify_name"
                android:textSize="@dimen/size_edittext" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/note_notify_time"
                android:textSize="@dimen/size_edittext" />

            <com.prostage.dental_manage.views.TextViewEdit
                android:id="@+id/tv_notify_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <com.prostage.dental_manage.views.TextViewEdit
                android:id="@+id/tv_notify_three_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/borderCalendarColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/information_hospital"
                android:textColor="@android:color/black"
                android:textSize="@dimen/size_edittext"
                android:textStyle="bold" />

            <com.prostage.dental_manage.views.TextViewEdit
                android:id="@+id/tv_address_hospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <com.prostage.dental_manage.views.TextViewEdit
                android:id="@+id/tv_tel_hospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/calendar_setting"
                android:textColor="@android:color/black"
                android:textSize="@dimen/size_edittext" />

            <com.prostage.dental_manage.views.WeeklyCalendar
                android:id="@+id/weekly_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <com.prostage.dental_manage.views.TextViewEdit
                android:id="@+id/tv_practice_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <com.prostage.dental_manage.views.TextViewEdit
                android:id="@+id/tv_closed_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <com.prostage.dental_manage.views.TextViewEdit
                android:id="@+id/tv_clinic_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <com.prostage.dental_manage.views.TextViewEdit
                android:id="@+id/tv_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/borderCalendarColor" />

            <Button
                android:id="@+id/btSave"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/background_button"
                android:text="@string/search"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_edittext" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>